[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/ui/caravan/screens/action_select.gd" id="1_action_select"]

[node name="ActionSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_action_select")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="TakeButton" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
focus_mode = 2
theme_override_font_sizes/font_size = 24
text = "TAKE"

[node name="StoreButton" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
focus_mode = 2
theme_override_font_sizes/font_size = 24
text = "STORE"

[node name="ExitButton" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
focus_mode = 2
theme_override_font_sizes/font_size = 24
text = "EXIT"

[node name="DescriptionLabel" type="Label" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
text = "Select an option..."
horizontal_alignment = 1
